--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,12 +26,13 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
-    androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
-    androidTestImplementation 'androidx.test:rules:1.1.0-alpha4'
-    implementation 'androidx.appcompat:appcompat:1.0.0-rc02'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0-rc02'
-
+//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
+//    androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
+//    androidTestImplementation 'androidx.test:rules:1.1.0-alpha4'
+//    implementation 'androidx.appcompat:appcompat:1.0.0-rc02'
+//    implementation 'androidx.recyclerview:recyclerview:1.0.0-rc02'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:24.2.1'
     // RxJava2 Dependencies
     implementation 'io.reactivex.rxjava2:rxjava:2.2.2'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
